initial copy of 5.2 visible signature and stamp changes to 5.5

--- a/dss-model/pom.xml
+++ b/dss-model/pom.xml
@@ -22,6 +22,11 @@
 			<groupId>eu.europa.ec.joinup.sd-dss</groupId>
 			<artifactId>dss-enumerations</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>javax.xml.bind</groupId>
+		    <artifactId>jaxb-api</artifactId>
+		</dependency>
+		
 		
 		<!-- No other dependencies than in scope test  -->
 		<dependency>
