refactoring to make remote signature with images and stamps possible

--- a/dss-signature-dto/pom.xml
+++ b/dss-signature-dto/pom.xml
@@ -19,5 +19,9 @@
 			<groupId>eu.europa.ec.joinup.sd-dss</groupId>
 			<artifactId>dss-common-remote-dto</artifactId>
 		</dependency>
+		<dependency>
+            <groupId>eu.europa.ec.joinup.sd-dss</groupId>
+            <artifactId>dss-model</artifactId>
+        </dependency>
 	</dependencies>
 </project>
