--- a/dss-signature-remote/pom.xml
+++ b/dss-signature-remote/pom.xml
@@ -26,6 +26,12 @@
 		<dependency>
 			<groupId>eu.europa.ec.joinup.sd-dss</groupId>
 			<artifactId>dss-xades</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>commons-codec</groupId>
+					<artifactId>commons-codec</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>eu.europa.ec.joinup.sd-dss</groupId>
@@ -43,11 +49,32 @@
 			<groupId>eu.europa.ec.joinup.sd-dss</groupId>
 			<artifactId>dss-asic-xades</artifactId>
 		</dependency>
+		<dependency>
+	        <groupId>com.logsentinel</groupId>
+	        <artifactId>logsentinel-java-client</artifactId>
+	        <version>0.1.1</version>
+	        <exclusions>
+	        	<exclusion>
+	        		<groupId>com.google.code.gson</groupId>
+	        		<artifactId>gson</artifactId>
+	        	</exclusion>
+	        	<exclusion>
+	        		<groupId>commons-codec</groupId>
+	        		<artifactId>commons-codec</artifactId>
+	        	</exclusion>
+	        </exclusions>
+		</dependency>
 
 		<dependency>
 			<groupId>eu.europa.ec.joinup.sd-dss</groupId>
 			<artifactId>dss-test</artifactId>
 			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>commons-codec</groupId>
+					<artifactId>commons-codec</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 </project>
