java font fix for cookbok project

--- a/dss-cookbook/pom.xml
+++ b/dss-cookbook/pom.xml
@@ -26,6 +26,10 @@
 			<artifactId>dss-service</artifactId>
 		</dependency>
 		<dependency>
+            <groupId>eu.europa.ec.joinup.sd-dss</groupId>
+            <artifactId>dss-model</artifactId>
+        </dependency>
+		<dependency>
 			<groupId>eu.europa.ec.joinup.sd-dss</groupId>
 			<artifactId>dss-tsl-validation</artifactId>
 		</dependency>
