--- a/dss-signature-dto/pom.xml
+++ b/dss-signature-dto/pom.xml
@@ -15,6 +15,10 @@
 	</properties>
 
 	<dependencies>
+	<dependency>
+            <groupId>eu.europa.ec.joinup.sd-dss</groupId>
+            <artifactId>dss-model</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>eu.europa.ec.joinup.sd-dss</groupId>
 			<artifactId>dss-common-remote-dto</artifactId>
